German version and new layer agencement

--- a/jsbuild/app.cfg
+++ b/jsbuild/app.cfg
@@ -376,7 +376,7 @@ include =
     GeoExt.ux/locale/WMSBrowser-de.js
     ux/locale/StreetViewPanel-de.js
     Styler/lang/de.js
-#    locale/de.js #GXP
+    locale/de.js #GXP
     CGXP/locale/de.js
 exclude =
     OpenLayers/Lang.js
