add qgis configuration

--- a/buildout_stage.cfg
+++ b/buildout_stage.cfg
@@ -1,11 +1,15 @@
 [buildout]
 extends = buildout.cfg
 parts -= fix-perm
+         print-template
+         print-war
+         mobile
+         jbuild-mobile
 
 [vars]
 instanceid = stage
 db = demo_maaeby
-host = admin-geospatial-suisse.gis.internal
+host = 127.0.0.1
 
 [jsbuild-mobile]
 compress = False
