Revert "Use projection 21781 and ACIT VD tiles"
This reverts commit 97216f5396fdb0381b935e33fc4f3dd274ccd093.

Conflicts:
	CONST_Makefile
	demo.mk
	demo/__init__.py
	demo/static/mobile/config.js

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,9 @@
 /config.cfg
 /project.yaml
 /mapserver/*.map
+/mapserver/*.mako
 /mapserver/*/*.map
+/mapserver/*/*.mako
 /mapserver/ms_error.log
 /demo/locale/*/LC_MESSAGES/*.mo
 /print/config.yaml
