--- a/apache/mapserver.conf.in
+++ b/apache/mapserver.conf.in
@@ -15,3 +15,13 @@ ScriptAlias /${instanceid}/mapserv /usr/lib/cgi-bin/mapserv
    #SetEnv MS_MAPFILE_PATTERN "^${directory}/mapserver/c2cgeoportal.map$"
 </Location>
 
+ScriptAlias /${instanceid}/tinyows /usr/lib/cgi-bin/tinyows
+<Location /${instanceid}/tinyows>
+   # SetHandler must be set to "cgi-script" when running the project on windows
+   SetHandler cgi-script
+   # MapServer run in FastCGI mode by default.
+   # If mod_fcgid is not available, replace 'fcgid-script' by 'cgi-script' to
+   # use the CGI mode.
+   SetEnv TINYOWS_CONFIG_FILE ${directory}/apache/tinyows.xml
+</Location>
+
